Fix horizontal scroll from appearing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -127,7 +127,7 @@ header nav ul li a:hover {
     /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
     text-shadow: 2px 10px 10px rgb(0, 0, 0);
     padding: 20px;  
-    width: 100vw;
+    width: 99.27vw; /* Slightly reduced to avoid horizontal scroll from appearing */
     position: relative;
     left: 50%;
     transform: translateX(-50%);
